# pairwise-ranking

./: .gitignore  CMakeLists.txt  README.md  notes.txt
include/: functions.h
src/: CMakeLists.txt  calculate_scores.cpp  calculate_scores.h  constants.h  functions.cpp  functions.h  helpers.cpp  helpers.h  keyboard_input.cpp  keyboard_input.h  menus.cpp  menus.h  pairwise-ranking.cpp  pairwise_ranking.cpp  print.cpp  print.h  program_loop.cpp  program_loop.h  score.cpp  score.h  score_helpers.cpp  score_helpers.h  vote.cpp  vote.h  voting_format.cpp  voting_format.h  voting_round.cpp  voting_round.h
src/test/: CMakeLists.txt  generate_ctests.py  register_ctests.py  test.cpp  test.h  test_calculate_scores.cpp  test_combine_scores.cpp  test_create_score_table.cpp  test_current_voting_line.cpp  test_e2e_voting_round.cpp  test_end_to_end.cpp  test_generate_new_voting_round.cpp  test_generate_score_file_data.cpp  test_generate_voting_round_file_data.cpp  test_get_active_menu_string.cpp  test_item_order_randomized.cpp  test_load_and_save_file.cpp  test_parse_scores.cpp  test_parse_voting_round.cpp  test_prune_votes.cpp  test_rank_based_voting.cpp  test_save_scores.cpp  test_save_votes.cpp  test_save_voting_round.cpp  test_shuffle_voting_order.cpp  test_undo.cpp  test_verify_voting_round.cpp  test_vote.cpp  test_voting_format.cpp  testing.cpp  testing.h
src/test/mocks/: log_catcher.h  mock_keyboard_input.cpp  output_catcher.h
