cmake_minimum_required(VERSION 3.15)

enable_testing()

function(addTestSuite suite_name #[[ARGN]])
	foreach (test_case ${ARGN})
		add_test(NAME "${suite_name}/${test_case}" COMMAND test ${suite_name} ${test_case})
	endforeach()
	list(APPEND test_suites ${suite_name})
	set(test_suites "${test_suites}" PARENT_SCOPE)
endfunction()

addTestSuite(test_calculate_scores
	zeroItemsAndVotes
	zeroVotes
	oneVoteForA
	oneVoteForB
	allVotesForA
	allVotesForB
	votingForItem2AndOptionAIfNotPresent
	votingForItem3AndOptionAIfNotPresent
	votingForItem2AndOptionBIfNotPresent
	votingForItem3AndOptionBIfNotPresent
	votingForItem2AndAgainstItem3AndOptionAIfNeither
	votingForItem2AndAgainstItem3AndOptionBIfNeither
	votingForItem3AndAgainstItem2AndOptionAIfNeither
	votingForItem3AndAgainstItem2AndOptionBIfNeither
	votingForOptionAButNotFullRound
	votingForOptionBButNotFullRound
	tooFewVotesToScoreAllItems
)

addTestSuite(test_combine_scores
	combiningNoScoreSet
	combiningOneScoreSetWithZeroScores
	combiningOneScoreSetWithOneScore
	combiningOneScoreSetWithMultipleScores
	combiningTwoScoreSetsWhenOneScoreSetIsEmpty
	combiningTwoScoreSetsWithSameItem
	combiningTwoScoreSetsWithDifferentItems
	endToEnd_combineFromTwoFiles
	endToEnd_combineFromThreeFiles
	endToEnd_combineFromTooFewFiles
	endToEnd_combineFromInvalidFileName
	endToEnd_combineFromAllEmptyFiles
	endToEnd_combineFromOneEmptyFile
)

addTestSuite(test_create_score_table
	noScores
	alreadySorted
	reversedOrder
	winLossDifferenceIsZeroAndTotalIsDifferent
	winLossDifferenceIsZeroAndTotalIsTheSame
	winLossDifferenceIsEqualAndPositive
	winLossDifferenceIsEqualAndNegative
	shortItemNameAndWinsAndLosses
	longItemNameAndWinsAndLosses
)

addTestSuite(test_current_voting_line
	counterLengthEqualsTotalLength
	counterLengthIsLessThanTotalLength
	itemIsShorterThanLongestItem
	itemLengthIsEqualToHeaderLength
	votingIsCompleted
	incompleteVotingIncreasesCounterAndChangesItem
)

addTestSuite(test_e2e_voting_round
	votingRoundIsTheSameAfterLoading
	scoresAreTheSameDespiteDifferentItemOrderAndSeed
)

addTestSuite(test_generate_new_voting_round
	generateWithTooFewItems
	generateWithOnlyEmptyItems
	generateWithSomeEmptyItems
	generateWithFullVoting
	generateWithReducedVotingIfTooFewItemsToReduce
	generateWithReducedVotingIfEnoughItemsToReduce
	generateWithFullVotingGivesCorrectAmountOfScheduledVotes
	generateWithReducedVotingGivesCorrectAmountOfScheduledVotes
	generateWithFullVotingGivesCorrectScheduledVotes
)

addTestSuite(test_generate_score_file_data
	noScores
	oneScore
	oneScoreWithSpacesInItemName
	multipleScores
)

addTestSuite(test_generate_voting_round_file_data
	emptyVotingRound
	votingRoundWithFullVoting
	votingRoundWithReducedVoting
	votingRoundWithOneVote
)

addTestSuite(test_get_active_menu_string
	showIntro
	noVotingRoundCreated
	votingRoundStarted
	votingRoundCompleted
)

addTestSuite(test_item_order_randomized
	itemOrderIsShuffledWhenShufflingNewVotingRound
	originalItemOrderIsRetainedWhenShufflingNewVotingRound
	itemOrderIsShuffledWhenShufflingParsedVotingRound
	originalItemOrderIsRetainedWhenShufflingParsedVotingRound
	convertingVotingRoundToTextUsesOriginalItemOrder
	scoresAreCalculatedWithCorrectItems
)

addTestSuite(test_load_and_save_file
	savingAndLoadingLines
	savingAndLoadingLinesWithEmptyLines
	savingAndLoadingOnlyEmptyLines
	savingNoLines
	loadingNoLines
	savingToExistingFile
	loadingNonExistingFile
)

addTestSuite(test_parse_scores
	stringIsEmpty
	stringIsValid
	itemIsAnInteger
	itemHasMultipleWords
	itemHasIntegersAfterSpace
	stringMissingWinsOrLosses
	stringMissingItem
	winsOrLossesAreNegative
	winsOrLossesAreAfterItem
	multipleItemsWithoutWinsOrLosses
	noStringsSent
	allStringsAreValid
	onlyOneStringIsValid
	validNumbers
	nonNumbers
)

addTestSuite(test_parse_voting_round
	noLinesToParse
	noItemsBeforeEmptyLine
	fewerThanTwoItems
	itemAppearsMultipleTimes
	anItemIsEmpty
	noEmptyLineBetweenItemsAndSeed
	seedIsMissing
	seedIsEmpty
	seedIsNotAPositiveInteger
	fullVoting
	reducedVotingWithTooFewItems
	reducedVotingWithEnoughItems
	reducedVotingSettingIsMissing
	reducedVotingSettingIsEmpty
	reducedVotingSettingIsInvalid
	noVotes
	voteDoesNotHaveThreeIntegers
	voteOptionIndicesAreGreaterThanNumberOfItems
	moreVotesThanPossible
	sameMatchupMultipleTimes
	chosenVoteIsNotZeroOrOne
	fourItemsAndReducedVotingAndFourVotes
	sevenItemsAndReducedVotingAndFourVotes
	fourItemsAndFullVotingAndOneVote
	fourItemsAndFullVotingAndZeroVotes
)

addTestSuite(test_prune_votes
	pruningDuringVotingRoundCreationWithTooFewItems
	pruningAmountDuringVotingRoundCreationDependsOnNumberOfItems
	parseVotingRoundWithPruning
	pruningRemovesCorrectScheduledVotes
)

addTestSuite(test_rank_based_voting
	newRoundFormatStringPresentsAvailableVotingFormatsAndNumberOfVotes
	createNewRankedVotingRound
	parseRankedVotingRoundWithNoVotes
	parseRankedVotingRoundWithSomeVotes
	parseRankedVotingRoundWithTooManyVotes
	undoWhenNoRankVote
	undoFirstRankVoteReducesNumberOfSortedItems
	undoLastRankVoteReducesNumberOfSortedItems
	undoAllRankVotesThenVoteTheSame
	undoRankVoteDisplaysPreviousOptions
	numberOfSortedItemsIncrementsWhenRightOptionChanges
	presentedOptionsDependOnVoting
	itemsAreSortedCorrectlyForNumberOfSortedItems
	currentRankingListPresentsNumberOfSortedItems
	convertingRankedVotingRoundToText
	rankItemsBySortingWhenInitiallyRanked
	rankItemsBySortingWhenInitiallyUnranked
	voteCounterAndApproximateTotalVotesIsPresented
)

addTestSuite(test_save_scores
	saveWhenNoScores
	saveWhenSomeScores
)

addTestSuite(test_save_votes
	saveWhenSomeVotesRemain
	saveWhenNoVotesRemain
)

addTestSuite(test_shuffle_voting_order
	shufflingWithSeedIsDeterministic
)

addTestSuite(test_undo
	undoWhenVotesExist
	undoWhenNoVotesExist
)

addTestSuite(test_vote
	firstVoteForA
	firstVoteForB
	votingForAForEachScheduledVote
	votingForBForEachScheduledVote
	votingAfterRoundCompleted
)

addTestSuite(test_voting_format
	charToFormatWithValidOptions
	charToFormatWithInvalidOptions
	stringToFormatWithValidOptions
	stringToFormatWithInalidOptions
	formatToString
)

addTestSuite(test_end_to_end
	mainMenuLegendPrinted
	mainMenuLegendNotReprinted
	mainMenuNewVotingRound
	mainMenuLoadVotingRound
	mainMenuCombine
	mainMenuQuit
	newVotingRoundSelectItemsPromptPrintedEachTime
	newVotingRoundSelectItemsEmptyFileName
	newVotingRoundSelectItemsCancel
	newVotingRoundSelectItemsNonExistingFile
	newVotingRoundSelectItemsTooFewItems
	newVotingRoundSelectItemsSuccessful
	newVotingRoundSelectFormatLegendPrinted
	newVotingRoundSelectFormatEstimatedVotesPrinted
	newVotingRoundSelectFormatLegendNotReprinted
	newVotingRoundSelectFormatCancel
	newVotingRoundSelectFormatPrintHelp
	newVotingRoundSelectFormatSuccessful
	loadVotingRoundPromptPrintedEachTime
	loadVotingRoundEmptyFileName
	loadVotingRoundCancel
	loadVotingRoundNonExistingFile
	loadVotingRoundEmptyFile
	loadVotingRoundInvalidFile
	loadVotingRoundSuccessful
	saveVotingRoundPromptPrintedEachTime
	saveVotingRoundEmptyFileName
	saveVotingRoundCancel
	saveVotingRoundSuccessful
	saveVotingRoundScoresNoVotes
	saveVotingRoundScoresPromptPrintedEachTime
	saveVotingRoundScoresEmptyFileName
	saveVotingRoundScoresCancel
	saveVotingRoundScoresSuccessful
	saveVotingRoundRankingNoVotes
	saveVotingRoundRankingPromptPrintedEachTime
	saveVotingRoundRankingEmptyFileName
	saveVotingRoundRankingCancel
	saveVotingRoundRankingSuccessful
	saveVotingRoundRankingSortedMarked
	votingLegendPrinted
	votingLegendNotReprinted
	votingMatchupPrintedEachTime
	votingCompletedLegendPrinted
	votingOptionA
	votingOptionB
	votingCompletedVoteOptionA
	votingCompletedVoteOptionB
	votingUndoScoreVote
	votingUndoRankVote
	votingUndoWithNoVotes
	votingPrintScore
	votingPrintRank
	votingQuitWhenSaved
	votingQuitWhenUnsavedLegendPrinted
	votingQuitWhenUnsavedLegendNotReprinted
	votingQuitWhenUnsavedThenSave
	votingQuitWhenUnsavedThenDontSave
	votingQuitWhenUnsavedThenCancel
	votingInvalidKey
	combinePromptPrintedEachTime
	combineEmptyFileNames
	combineCancel
	combineTooFewFiles
	combineNonExistingFiles
	combineInvalidFiles
	combineSuccessful
	combineViewScoresLegendPrinted
	combineViewScoresLegendNotReprinted
	combineViewScoresDoesNotAutomaticallySave
	combineViewScoresPrint
	combineSaveScoresPromptPrintedEachTime
	combineSaveScoresEmptyFileName
	combineSaveScoresCancel
	combineSaveScoresSuccessful
)

function(addTestExe test_suites #[[ARGN]])
	list(TRANSFORM test_suites APPEND ".cpp")
	add_executable(test
		testing.cpp
		test.cpp
		${test_suites}
		${ARGN} # Dependencies
	)
	target_include_directories(test PRIVATE ${PROJECT_SOURCE_DIR}/src)
endfunction()

addTestExe("${test_suites}"
    ${PROJECT_SOURCE_DIR}/src/calculate_scores.cpp
    ${PROJECT_SOURCE_DIR}/src/functions.cpp
    ${PROJECT_SOURCE_DIR}/src/helpers.cpp
    ${PROJECT_SOURCE_DIR}/src/menus.cpp
    ${PROJECT_SOURCE_DIR}/src/print.cpp
    ${PROJECT_SOURCE_DIR}/src/program_loop.cpp
    ${PROJECT_SOURCE_DIR}/src/score.cpp
    ${PROJECT_SOURCE_DIR}/src/score_helpers.cpp
    ${PROJECT_SOURCE_DIR}/src/test/mocks/mock_keyboard_input.cpp
    ${PROJECT_SOURCE_DIR}/src/vote.cpp
    ${PROJECT_SOURCE_DIR}/src/voting_format.cpp
    ${PROJECT_SOURCE_DIR}/src/voting_round.cpp
)
